Dynamic Paint Doesn't Recalculate Normals with Smooth Shading #64120

Closed
opened 2019-05-04 00:02:03 +02:00 by Kenzie · 8 comments
Contributor

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-03 17:44, hash: bed8ad6f95
Worked: ??? (Before 2.8 at-least)

Short description of error
While smooth shading is active on the canvas normals won't recalculate properly in displace or wave mode.

Exact steps for others to reproduce the error
Add a plane, subdivide (modifier or edit mode), set smooth shading, and add a dynamic paint canvas in either displace or waves mode.
Test it out with a brush object and the timeline playing and switch back to flat shading on the canvas, there should be a noticeable difference in a lack of surface perturbation.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-03 17:44, hash: `bed8ad6f95` Worked: ??? (Before 2.8 at-least) **Short description of error** While smooth shading is active on the canvas normals won't recalculate properly in displace or wave mode. **Exact steps for others to reproduce the error** Add a plane, subdivide (modifier or edit mode), set smooth shading, and add a dynamic paint canvas in either displace or waves mode. Test it out with a brush object and the timeline playing and switch back to flat shading on the canvas, there should be a noticeable difference in a lack of surface perturbation.
Author
Contributor

Added subscriber: @KenzieMac130

Added subscriber: @KenzieMac130

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Could you add an example file?

Could you add an example file?
Author
Contributor

Sure thing! Just hit play.

DynPaintBugExample.blend

Sure thing! Just hit play. [DynPaintBugExample.blend](https://archive.blender.org/developer/F7010447/DynPaintBugExample.blend)
Bastien Montagne was assigned by Sebastian Parborg 2019-05-07 09:51:55 +02:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

@mont29 I've talked to @Sergey about this and he'll said will take care of it if this turns out to be a depsgraph issue.
Just reassign if that is the case.

@mont29 I've talked to @Sergey about this and he'll said will take care of it if this turns out to be a depsgraph issue. Just reassign if that is the case.

This issue was referenced by 76bf9b766c

This issue was referenced by 76bf9b766c6ee10aa32eda6243e413f30da7152c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64120
No description provided.