Fix T64120: Dynamic Paint Doesn't Recalculate Normals with Smooth Shading.

For wome reason, tag to mark normals as needing recompute was commented
out instead of updated to new system, during conversion of DynaPaint
code for 2.8 new evaluation stack... Trivial fix.